Updated project with new files and configurations

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
   </div>
 
-  <div class="w-2/3 h-10 mx-auto mt-3">
+  <div class="w-2/3 h-5 mx-auto mt-3  title pl-2">
     <h4 class="text-left font-semibold text-lg">Winter wear picks</h4>
   </div>
   <div id="smallGallery" class="flex justify-between items-center mx-auto w-2/3 h-fit mt-3 px-2 pt-1">
