Updated project with new files and configurations

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div style="color: white;" class="box2-col2">
         <h4>New arrivals</h4>
         <h1>The black tie edit</h1>
-        <button>Shop now</button>
+        <button class="text-black border-none py-1 px-2 ; bg-white font-semibold mt-3">Shop now</button>
       </div>
     </div>
     <div class="first photo box3">
@@ -114,13 +114,13 @@
       <div class="box3-col2">
         <h1>Sharp comfort</h1>
         <p class="r">Statement hoodies, sweatshirts, and puffers with a sporty allure.</p>
-        <button>Shop now</button>
+        <button class="text-black border-none py-1 px-2 ; bg-white font-semibold mt-3">Shop now</button>
       </div>
     </div>
     <div class="first photo box4">
       <div class="box4-col1">
         <h1>Holiday 2024</h1>
-        <button>Shop now</button>
+        <button class="text-black border-none py-1 px-2 ; bg-white font-semibold mt-3">Shop now</button>
       </div>
       <div class="box4-col2">
         <p>Rs. 1,299.00 <br>
@@ -185,7 +185,7 @@
   <div id="last" class="grid grid-cols-1 justify-items-center items-end p-4 text-center">
     <div>
       <h1 class="text-white p-4 text-4xl">Sport luxe edit</h1>
-      <button class="text-black border-none py-2 px-3 ; bg-white font-semibold">Shop now</button>
+      <button class="text-black border-none py-1 px-2 ; bg-white font-semibold">Shop now</button>
     </div>
   </div>
   
